--- a/menu/index.html
+++ b/menu/index.html
@@ -281,28 +281,28 @@
                             <p>rossa stile inglese 5,6%</p>
                         </li>
                         <li>
-                            <h3>Castelli Extrema Ratio &emsp;  4 / 6</h3>
-                            <p>doppia ipa amara 7,2%</p>
+                            <h3>Castelli Brevis Furor &emsp;  4 / 6</h3>
+                            <p>ipa amara 6,3%</p>
                         </li>
                         <li>
-                            <h3>Emiliano Orzo White &emsp;  4 / 6</h3>
-                            <p>ipa amara 5,5</p>
+                            <h3>Gambrinus Weisse &emsp;  4 / 6</h3>
+                            <p>weisse 5,2</p>
                         </li>
                         <li>
                             <h3>Gambrinus Helles &emsp;  4 / 6</h3>
                             <p>hell 4,9%</p>
                         </li>
                         <li>
-                            <h3>MC77 Communication &emsp;  4 / 6</h3>
-                            <p>american pale ale 5,6%</p>
+                            <h3>MC77 Ape Regina &emsp;  4 / 6</h3>
+                            <p>belgian ale al miele 6,2%</p>
                         </li>
                         <li>
-                            <h3>Mukkeller Marina &emsp;  4 / 6</h3>
-                            <p>ambrata fruttata e amara 6,4%</p>
+                            <h3>Mukkeller Hattori Hanzo &emsp;  4 / 6</h3>
+                            <p>doppia ipa amara 8,2%</p>
                         </li>
                         <li>
                             <h3>Zotler Dunkel &emsp;  4 / 6</h3>
-                            <p>rossa stile tedesco 5%</p>
+                            <p>rossa stile tedesco 5,2%</p>
                         </li>
                     </ul>
                 </div>
@@ -313,32 +313,16 @@
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Castelli Caput Mundi 75cl &emsp; 12</h3>
-                                <p>10% ale scura</p>
-                            </li>
-                            <li>
-                                <h3>MC-77 Mild the Gap 33cl &emsp; 5</h3>
-                                <p>4,5% ale scura</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="paragraph-divider">
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Auer Pilsner 50cl &emsp; 5</h3>
-                                <p>4,9% bionda pils</p>
-                            </li>
-                            <li>
                                 <h3>Gambrinus Pils 50cl &emsp; 6</h3>
-                                <p>4,9% bionda pils</p>
+                                <p>bionda pils 4,9%</p>
                             </li>
                             <li>
-                                <h3>Nicobar IPA 33cl &emsp; 6</h3>
-                                <p>6,4% ipa amara biologica</p>
+                                <h3>Irseer Urtrunk 50cl &emsp; 6</h3>
+                                <p>helles export 5,6%</p>
                             </li>
                             <li>
-                                <h3>Gusswerk Weiss IPA 33cl &emsp; 6</h3>
-                                <p>6,2% weisse amara biologica</p>
+                                <h3>Zotler Festwochen 50cl &emsp; 6</h3>
+                                <p>bionda tedesca 5,5%</p>
                             </li>
                             <li>
                                 <h3>Hirsch Weisser 50cl &emsp; 6</h3>
@@ -349,8 +333,8 @@
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Irseer Klosterstarkbier 50cl &emsp; 6</h3>
-                                <p>abazzia 7%</p>
+                                <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
+                                <p>rossa tedesca 7,2%</p>
                             </li>
                             <li>
                                 <h3>MC-77 San Lorenzo 33cl &emsp; 6</h3>
@@ -361,8 +345,8 @@
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Castelli Calix Niger 33cl &emsp; 6</h3>
-                                <p>7,2% stout</p>
+                                <h3>Castelli Calix Niger 75cl &emsp; 14</h3>
+                                <p>chocolate stout 6,7%</p>
                             </li>
                             <li>
                                 <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
@@ -374,32 +358,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Gusswerk Zum Wohl 33cl &emsp; 6</h3>
-                                <p>4,9% tedesca senza glutine biologica</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="title-divider">
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-
-                            <li>
-                                <h3>Crooked Cranberry 37,5cl &emsp; 15</h3>
-                                <p>4,5% acida</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Progenitor 37,5cl &emsp; 15</h3>
-                                <p>6,2% acida</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Surette 37,5cl &emsp; 15</h3>
-                                <p>6,2% acida</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Vielle 37,5cl &emsp; 15</h3>
-                                <p>6,2% acida</p>
-                            </li>
-                            <li>
-                                <h3>Tall Tale &emsp; 17</h3>
-                                <p>8,5% acida</p>
+                                <p>tedesca senza glutine biologica 4,9%</p>
                             </li>
                         </ul>
                     </div>
@@ -437,8 +396,8 @@
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Prosecco Extra Dry &emsp;15</h3>
-                            <p>bervini</p>
+                            <h3>Prosecco DOCG Extra Dry &emsp;15</h3>
+                            <p>cantina serre di pederiva</p>
                         </li>
                     </ul>
                 </div>
@@ -450,10 +409,6 @@
                         <li>
                             <h3>Nero Visciola &emsp;3,5 / 19</h3>
                             <p>antinori</p>
-                        </li>
-                        <li>
-                            <h3>Sante Lancerio Passito &emsp;4,5</h3>
-                            <p>tavignano</p>
                         </li>
                     </ul>
                 </div>
