--- a/menu/index.html
+++ b/menu/index.html
@@ -325,7 +325,7 @@
                                 <p>bionda tedesca 5,5%</p>
                             </li>
                             <li>
-                                <h3>Hirsch Weisser 50cl &emsp; 6</h3>
+                                <h3>Zotler Weisse 50cl &emsp; 6</h3>
                                 <p>5,2% weisse</p>
                             </li>
                         </ul>
@@ -336,10 +336,6 @@
                                 <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
                                 <p>rossa tedesca 7,2%</p>
                             </li>
-                            <li>
-                                <h3>MC-77 San Lorenzo 33cl &emsp; 6</h3>
-                                <p>5,2% blanche</p>
-                            </li>
                         </ul>
                     </div>
                     <div class="paragraph-divider">
@@ -347,6 +343,10 @@
                             <li>
                                 <h3>Castelli Calix Niger 75cl &emsp; 14</h3>
                                 <p>chocolate stout 6,7%</p>
+                            </li>
+                            <li>
+                                <h3>Camba Coffee Porter 33cl &emsp; 6</h3>
+                                <p>chocolate stout 5,4%</p>
                             </li>
                             <li>
                                 <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
