--- a/menu/index.html
+++ b/menu/index.html
@@ -326,7 +326,7 @@
                             </li>
                             <li>
                                 <h3>Zotler Weisse 50cl &emsp; 6</h3>
-                                <p>5,2% weisse</p>
+                                <p>weisse 5,2% </p>
                             </li>
                         </ul>
                     </div>
@@ -350,7 +350,7 @@
                             </li>
                             <li>
                                 <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
-                                <p>5,5% nera tedesca</p>
+                                <p>nera tedesca 5,5% </p>
                             </li>
                         </ul>
                     </div>
