--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h2>Ca' Vecchia Beerstrot</h2>
+                <!-- <h2>Ca' Vecchia Beerstrot</h2> -->
                 <!-- <p>Dal <strong>1 Giugno</strong> al <strong>31 Agosto</strong> siamo aperti <strong>tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
                 <p>Dal <strong>Mercoledì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
