--- a/asporto/index.html
+++ b/asporto/index.html
@@ -116,44 +116,41 @@
     <div class="tabs-content" id="menupage-text">
         <section class="content active">
             <div class="row">
+                <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Alette di Pollo &emsp; 5,5</h3>
-                            <p> in salsa piccante</p>
-                        </li>
-                        <li>
                             <h3>Bocconcini di Pollo &emsp; 5</h3>
                             <p>serviti con salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Olive all'Ascolana &emsp; 5</h3>
-                            <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
                             <h3>Mozzarelle Fritte &emsp; 5,5</h3>
                             <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
-                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
-                        </li>
-                        <li>
                             <h3>Cipolla Fritta &emsp; 4,5</h3>
                             <p>anelli di cipolla dorata impanati</p>
                         </li>
                         <li>
-                            <h3>Ratatouille &emsp; 4,5</h3>
-                            <p>verdura fresca tagliata a dadi e cotta al forno</p>
+                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
+                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
-                        <!-- <li>
-                            <h3>Nachos Supreme &emsp; 5,5</h3>
-                            <p>tortillas, cheddar, peperoncino fresco</p>
-                        </li> -->
+                        <li>
+                            <h3>Olive all'Ascolana &emsp; 5</h3>
+                            <p>il più tipico dei piatti marchigiani</p>
+                        </li>
                         <li>
                             <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
                             <p>servite con salse del Beerstrot</p>
+                        </li>
+                        <li>
+                            <h3>Tacos Vegetariano &emsp; 5,5</h3>
+                            <p>con dadolata di zucca e ceci, insalata, salsa allo yogurt</p>
+                        </li>
+                        <li>
+                            <h3>Tacos Chilli &emsp; 5,5</h3>
+                            <p>con carne e fagioli, insalata, salsa allo yogurt</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>
@@ -183,28 +180,24 @@
                             <p>manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Estivo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
+                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, scamorza affumicata, crema di porcini, speck croccante</p>
                         </li>
                         <li>
-                            <h3>Greco &emsp; 8,9 / doppio 14,9</h3>
-                            <p>manzo, melanzana grigliata, julienne di iceberg, salsa tzatziki</p>
+                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
+                            <p>manzo, gorgonzola, crema di zucca, speck croccante</p>
                         </li>
                         <li>
-                            <h3>Pulled Pork &emsp; 9,5</h3>
-                            <p>spalla di maiale sfilacciata, coleslow, cetriolini, salsa piccante</p>
+                            <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, gorgonzola, bacon, pomodorini confit</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
                             <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>Cacciatore &emsp; 10,5 / doppio 14,9</h3>
-                            <p>pollo, bacon, peperoni stufati, crema di peperoni</p>
-                        </li>
-                        <li>
                             <h3>Vegetariano &emsp; 8</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di zucchine e menta</p>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
                         </li>
                         <li>
                             <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
@@ -244,10 +237,6 @@
                             <li>
                                 <h3>Blondie &emsp; 5</h3>
                                 <p>brownie servito con crema di mascarpone</p>
-                            </li>
-                            <li>
-                                <h3>Millefoglie &emsp; 5</h3>
-                                <p>alla crema di gianduia e nocciole</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
