--- a/asporto/index.html
+++ b/asporto/index.html
@@ -245,7 +245,7 @@
                         </ul>
                     </div>
                     <div class="title-divider">
-                        <p class="text-center">I nostri prodotti contengono allergeni</p>
+                        <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. I prodotti contengono allergeni: richiedi la lista al personale.</p>
                         <br>
                     </div>
                 </div>
