--- a/menu/index.html
+++ b/menu/index.html
@@ -247,7 +247,7 @@
                         <br>
                     </div>
                     <div class="title-divider">
-                        <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. I prodotti contengono allergeni: richiedi la lista al personale.</p>
+                        <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br>I prodotti contengono allergeni: richiedi la lista al personale.</p>
                         <br>
                     </div>
                 </div>
