--- a/contatti/index.html
+++ b/contatti/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/contatti/"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Facebook Pixel Code -->
     <script>
@@ -83,11 +83,11 @@
                         <span itemprop="addressRegion">AN</span>
                         <span class="hide-for-small" itemprop="addressCountry">Italia</span></a>
                     </h6>
-                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
+                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Prenota</a></span>
             </div>
             <div class="medium-6 large-6 columns">
                 <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><img class="extra-space-image-tab-contatti" src="http://www.beerstrot.it/asset/img/medium/mappa.jpg" alt="Mappa"></a>
-                <span class="show-for-small"><br><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
+                <span class="show-for-small"><br><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Prenota</a></span>
             </div>
         </div>
     </div>
@@ -354,7 +354,8 @@
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
+                    <a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
