--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -27,7 +27,7 @@
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/eventi/san-silvestro-2016.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Facebook Pixel Code -->
     <script>
@@ -101,8 +101,8 @@
                 <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bere incluso.</p>
                 <p>Il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di Cingoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>Aceto Balsamico Extra Vecchio di Modena</strong>.</p>
                 <p>Prenotazone richiesta.</p>
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
                 <h3 class="subheader">Antipasto</h3>
@@ -146,8 +146,8 @@
                     <li>Cotechino del Salumifici Bellucci di Castelnuovo di Modena</li>
                     <li>Panettone Artigianale della Pasticceria  Giuliodori di Filottrano</li>
                 </ul>
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
                 <hr>
             </div>
         </article>
@@ -232,7 +232,8 @@
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
+                    <a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
