--- a/eventi/flora-e-fauna-concerto-live.html
+++ b/eventi/flora-e-fauna-concerto-live.html
@@ -24,7 +24,7 @@
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/eventi/flora-e-fauna-concerto-live.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
@@ -87,7 +87,7 @@
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a>
+                        <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Prenota</a>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,8 @@
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
+                    <a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
