--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Facebook Pixel Code -->
     <script>
@@ -81,8 +81,8 @@
         </div>
         <div class="row">
             <div class="small-12 columns show-for-small-only extra-space clearfix">
-                <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
-                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
+                <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fa fa-phone"></i> Chiama</a>
+                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fa fa-map-marker"></i> Dove Siamo</a>
             </div>
         </div>
     </header>
@@ -95,12 +95,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 large-6 columns">
+            <div class="medium-12 large-12 columns">
                 <!-- <h2>Ca' Vecchia Beerstrot</h2> -->
                 <!-- <p>Dal <strong>1 Giugno</strong> al <strong>31 Agosto</strong> siamo aperti <strong>tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
                 <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-from-tabs"><i class="fi-telephone"></i> Prenota</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="show-for-small"><a role="button" href="https://wa.me/390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
             </div>
             <!-- <div class="medium-6 large-6 columns">
                 <h2>Casetta sull'Aia</h2>
@@ -267,7 +268,8 @@
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
+                    <a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
