--- a/menu/index.html
+++ b/menu/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/menu/"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 <!-- Facebook Pixel Code -->
     <script>
@@ -76,8 +76,8 @@
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
             <hr>
-            <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong><span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
-            <span class="show-for-small"><br><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+            <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong><span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span></h4>
+            <span class="show-for-small"><br><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
             <hr>
         </div>
     </header>
@@ -406,8 +406,8 @@
 <!-- call to action inizio -->
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
             </div>
         </div>
 <!-- call to action fine -->
@@ -459,7 +459,8 @@
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
+                    <a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
