--- a/video/index.html
+++ b/video/index.html
@@ -27,6 +27,7 @@
     <link rel="canonical" href="http://www.beerstrot.it/video/"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
 <!-- navbar con hamburger -->
@@ -79,11 +80,11 @@
                     <span itemprop="addressRegion">AN</span>
                     <span class="hide-for-small" itemprop="addressCountry">Italia</span></a>
                 </h6>
-                <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a>
+                <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Chiama</a>
             </span>
             <span class="show-for-small-only clearfix">
-                <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
-                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
+                <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fa fa-phone"></i> Chiama</a>
+                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fa fa-map-marker"></i> Dove Siamo</a>
             </span>
         </div>
     </div>
@@ -130,10 +131,11 @@
     </footer>
     <footer class="panel-footer">
         <div class="row">
-            <div class="small-6 medium-3 large-3 columns">
+            <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
+                    <a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
