--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -89,7 +89,7 @@
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Prenota</a>
+                        <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Chiama</a>
                     </div>
                 </div>
             </div>
