--- a/contatti/index.html
+++ b/contatti/index.html
@@ -69,25 +69,30 @@
         <div class="row">
             <div class="medium-6 large-6 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h2>Ca' Vecchia Beerstrot</h2>
-                    <h6>Telefono:
-                        <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
-                    </h6>
-                    <h6>Email:
-                        <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
-                    </h6>
-                    <h6>Indirizzo:
-                        <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                        <span itemprop="streetAddress">Via Centofinestre, 20</span>
-                        <span itemprop="postalCode">60024</span>
-                        <span itemprop="addressLocality">Filottrano</span>
-                        <span itemprop="addressRegion">AN</span>
-                        <span class="hide-for-small" itemprop="addressCountry">Italia</span></a>
-                    </h6>
-                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Prenota</a></span>
+                <h6>Telefono:
+                    <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
+                </h6>
+                <h6>Chat:
+                    <a href="https://wa.me/390718853384"><span itemprop="telephone">Whatsapp</span></a>
+                </h6>
+                <h6>Email:
+                    <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
+                </h6>
+                <h6>Indirizzo:
+                    <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                    <span itemprop="streetAddress">Via Centofinestre, 20</span>
+                    <span itemprop="postalCode">60024</span>
+                    <span itemprop="addressLocality">Filottrano</span>
+                    <span itemprop="addressRegion">AN</span>
+                    <span class="hide-for-small" itemprop="addressCountry">Italia</span></a>
+                </h6>
+                <br>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-button"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="hide-for-small"><a role="button" href="https://wa.me/390718853384" class="button right extra-space-button"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
             </div>
             <div class="medium-6 large-6 columns">
                 <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><img class="extra-space-image-tab-contatti" src="http://www.beerstrot.it/asset/img/medium/mappa.jpg" alt="Mappa"></a>
-                <span class="show-for-small"><br><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Prenota</a></span>
+                <span class="show-for-small"><br><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fa fa-phone"></i> Chiama</a></span>
             </div>
         </div>
     </div>
