--- a/asporto/index.html
+++ b/asporto/index.html
@@ -58,9 +58,7 @@
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
